--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -1,12 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import './modal.css';
+@import "./modal.css";
 
-@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
 
-h1, h2 {
-  font-family: 'Press Start 2P', cursive;
+h1,
+h2 {
+  font-family: "Press Start 2P", cursive;
   font-size: 1rem;
 }
 
@@ -18,8 +19,9 @@ h1, h2 {
   border-bottom: white 0.5px solid;
 }
 
-body, html {
-  background-color:black;
+body,
+html {
+  background-color: black;
   margin: 0;
   text-align: center;
   height: 100vh;
